--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "krabuchi.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://krabuchi.github.io/",
+  "homepage": "https://krabuchi.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
