--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krabuchi.github.io",
-  "homepage": "http://krabuchi.github.io/",
+  "homepage": "http://krabuchi.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,10 +15,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
     "typescript": "~3.7.2"
@@ -28,6 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
